[tool.poetry]
name = "diyeyetrackingtest"
version = "0.1.0"
description = ""
authors = ["Zdzislaw Goik <z.goik@rynekpierwotny.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
opencv-python = "^4.5.5"
black = "^22.1.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
