[tool.poetry]
name = "pythonexamples"
version = "0.1.0"
description = ""
authors = ["lorow <smykupyka@gmail.com>"]
license = "gnu gplv3"

[tool.poetry.dependencies]
python = "^3.8"
zeroconf = "^0.38.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
