[tool.poetry]
name = "pythonexamples"
version = "0.1.0"
description = ""
authors = ["lorow <smykupyka@gmail.com>"]
license = "gnu gplv3"

[tool.poetry.dependencies]
python = "^3.10"
zeroconf = "^0.38.4"
black = "^22.3.0"
ruff = "^0.0.259"
pytest = "^7.2.2"
aiohttp = "^3.8.4"
pydantic = "^1.10.7"
pytest-asyncio = "^0.21.0"
aioresponses = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
